Do not use deprecated Boolean constructor.
Change-Id: If317ec13ca9ae0cc9ec6d4555afd0b26a402e376
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>